- Moving fonts to correct inclusion path - Removing unnecessary font example pages (!!) - Fixing issues with social icons in footer links - Adding draft label to post page and positioning it correctly - Fixing issues seen in IE10 with the tags list bullets appearing half chopped on the side (set list-style: none;) - Narrowed max width to 850px for readability. Could go even smaller.

--- a/sass/_fonts.scss
+++ b/sass/_fonts.scss
@@ -5,7 +5,7 @@
  * Fully installable fonts can be purchased at http://www.fontspring.com
  *
  * The fonts included in this stylesheet are subject to the End User License you purchased
- * from Fontspring. The fonts are protected under domestic and international trademark and 
+ * from Fontspring. The fonts are protected under domestic and international trademark and
  * copyright law. You are prohibited from modifying, reverse engineering, duplicating, or
  * distributing this font software.
  *
@@ -19,11 +19,11 @@
 
 @font-face {
     font-family: 'nexa_boldregular';
-    src: url('Nexa_Free_Bold-webfont.eot');
-    src: url('Nexa_Free_Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Nexa_Free_Bold-webfont.woff') format('woff'),
-         url('Nexa_Free_Bold-webfont.ttf') format('truetype'),
-         url('Nexa_Free_Bold-webfont.svg#nexa_boldregular') format('svg');
+    src: url('/assets/fonts/nexabold/Nexa_Free_Bold-webfont.eot');
+    src: url('/assets/fonts/nexabold/Nexa_Free_Bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/assets/fonts/nexabold/Nexa_Free_Bold-webfont.woff') format('woff'),
+         url('/assets/fonts/nexabold/Nexa_Free_Bold-webfont.ttf') format('truetype'),
+         url('/assets/fonts/nexabold/Nexa_Free_Bold-webfont.svg#nexa_boldregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
