--- a/source/assets/css/global.css
+++ b/source/assets/css/global.css
@@ -1,4 +1,30 @@
 @charset "UTF-8";
+/*
+ * Web Fonts from fontspring.com
+ *
+ * All OpenType features and all extended glyphs have been removed.
+ * Fully installable fonts can be purchased at http://www.fontspring.com
+ *
+ * The fonts included in this stylesheet are subject to the End User License you purchased
+ * from Fontspring. The fonts are protected under domestic and international trademark and
+ * copyright law. You are prohibited from modifying, reverse engineering, duplicating, or
+ * distributing this font software.
+ *
+ * (c) 2010-2012 Fontspring
+ *
+ * The fonts included are copyrighted by the vendor listed below.
+ *
+ * Vendor:      Fontfabric
+ * License URL: http://www.fontspring.com/fflicense/fontfabric
+ */
+@font-face {
+  font-family: 'nexa_boldregular';
+  src: url("/assets/fonts/nexabold/Nexa_Free_Bold-webfont.eot");
+  src: url("/assets/fonts/nexabold/Nexa_Free_Bold-webfont.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/nexabold/Nexa_Free_Bold-webfont.woff") format("woff"), url("/assets/fonts/nexabold/Nexa_Free_Bold-webfont.ttf") format("truetype"), url("/assets/fonts/nexabold/Nexa_Free_Bold-webfont.svg#nexa_boldregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 /*------------------------------------*\
     STYLE.CSS
 \*------------------------------------*/
@@ -3256,6 +3282,9 @@ section article header h1 span.draft {
   margin-left: 0.5rem;
   text-shadow: 0 1px 0 #c00;
   text-transform: lowercase;
+  vertical-align: top;
+  line-height: 2rem;
+  /*40px;*/
 }
 section article header time {
   color: #aaaaaa;
@@ -3502,6 +3531,7 @@ section.testimonials article a:hover {
   font-size: 1rem;
   margin: 0 1.5rem;
   padding: 0;
+  list-style-type: none;
 }
 .tag_list ul li {
   padding: 0.3rem 0;
@@ -3732,20 +3762,20 @@ footer.main small {
     padding-left: 60px;
   }
   footer.main dl .twitter a {
-    background-position: -32px -1095px;
+    background-position: -32px -1103px;
     line-height: 65px;
     height: 65px;
   }
   footer.main dl .linkedin a {
-    background-position: -32px -1176px;
+    background-position: -32px -1184px;
     line-height: 65px;
     height: 65px;
   }
   footer.main dl .twitter a:hover {
-    background-position: -25px -1095px;
+    background-position: -25px -1103px;
   }
   footer.main dl .linkedin a:hover {
-    background-position: -25px -1176px;
+    background-position: -25px -1184px;
   }
 }
 @media screen and (min-width: 25em) {
@@ -3796,6 +3826,7 @@ footer.main small {
   /*600px*/
   .content {
     width: 80%;
+    max-width: 850px;
   }
 
   body {
@@ -3885,6 +3916,19 @@ footer.main small {
     -o-column-count: 3;
     column-count: 3;
     font-size: 1.2rem;
+  }
+
+  footer.main dl .twitter a {
+    background-position: -32px -1100px;
+  }
+  footer.main dl .linkedin a {
+    background-position: -32px -1181px;
+  }
+  footer.main dl .twitter a:hover {
+    background-position: -25px -1100px;
+  }
+  footer.main dl .linkedin a:hover {
+    background-position: -25px -1181px;
   }
 }
 @media screen and (min-height: 43.75em) {
